--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name= employeepayroll
 
 spring.profiles.active= dev
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/payroll_service
+spring.datasource.username=root
+spring.datasource.password=@GaniMySql02
