--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,7 @@ environment = COMMON
 
 server.port = 8090
 spring.application.name= employeepayroll
-
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/payroll_service
-
-
-spring.datasource.username=root
-spring.datasource.password=@GaniMySql02
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
